--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
-
 {
   "name": "@shadejs/shadejs",
   "version": "0.1.0",
   "description": " Modular JavaScript SPA framework built on closed-shadow Web Components",
   "main": "index.mjs",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,11 @@
     "javascript"
   ],
   "author": "F1L3R",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "xo": "^0.56.0"
+  }
 }
