Use a custom relative url and babel style loader for mocking tests and for importing modules on the server.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,13 @@
 		"sourceType": "module"
 	},
 	"rules": {
-		"prettier/prettier": 2
+		"prettier/prettier": 2,
+		"capitalized-comments": [
+			"error",
+			"always",
+			{
+				"ignorePattern": "*"
+			}
+		]
 	}
 }
-
