--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": " Modular JavaScript SPA framework built on closed-shadow Web Components",
 	"type": "module",
 	"scripts": {
-		"start": "node --loader ./lib/loader.mjs ./server/server.mjs",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"serve": "node --loader ./lib/loader.mjs ./server/server.mjs",
+		"test-e2e": "node --loader ./lib/loader.mjs ./server/server.mjs & node --loader ./lib/loader.mjs --test **/*.e2e.test.mjs"
 	},
 	"keywords": [
 		"spa",
@@ -17,11 +17,13 @@
 	"author": "F1L3R",
 	"license": "ISC",
 	"devDependencies": {
-		"ava": "^6.0.1",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"prettier": "^3.1.1",
 		"xo": "^0.56.0"
+	},
+	"dependencies": {
+		"puppeteer": "^21.7.0"
 	}
 }
